--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-    "name": "ria-example",
-    "version": "1.0.0",
-    "devDependencies": {
-        "@types/jest": "^30.0.0",
-        "@types/node": "^24.9.2",
-        "jest": "^30.2.0",
-        "ts-jest": "^29.4.5",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.9.3"
-    },
-    "scripts": {
-        "test": "jest"
-    }
+  "name": "ria-example",
+  "version": "1.0.0",
+  "type": "module",
+  "devDependencies": {
+    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/ui": "^2.1.8",
+    "vitest": "^2.1.8"
+  },
+  "scripts": {
+    "test": "vitest"
+  }
 }
